# occams-rpc

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
codec/: Cargo.toml
codec/src/: lib.rs
core/: Cargo.toml
core/src/: codec.rs  error.rs  lib.rs
core/tests/: buf_stream.rs
docs/: agent.md  api_design.md  api_server_macros.md  design_v2.md  stream_client_macros.md  stream_server_macros.md
macros/: Cargo.toml
macros/src/: endpoint_async.rs  lib.rs  service.rs  service_mux_struct.rs
macros/tests/: common.rs  test_api_macros.rs  test_client_service.rs  test_server_service.rs
src/: lib.rs  server.rs  service.rs
src/client/: mod.rs  task.rs
src/ll/: notifier.rs
src/server/: dispatch.rs  mod.rs  service.rs  task.rs
src/stream/: client.rs  mod.rs  notifier.rs
stream/: Cargo.toml
stream/macros/: Cargo.toml
stream/macros/src/: client_task.rs  client_task_enum.rs  lib.rs  server_task_enum.rs
stream/macros/tests/: test_client_task.rs  test_client_task_define.rs  test_client_task_enum.rs  test_client_task_enum_define.rs  test_client_task_enum_generic.rs  test_server_task_enum.rs
stream/src/: client.rs  client_impl.rs  client_timer.rs  error.rs  lib.rs  proto.rs  server.rs  server_impl.rs
stream/src/client/: failover.rs  mod.rs  pool.rs  stream.rs  task.rs
stream/src/server/: dispatch.rs  graceful.rs  mod.rs  server.rs  task.rs
stream/test/src/: client.rs
stream/test/src/tests/: bench_throughput.rs  test_client_drop.rs  test_error_handling.rs  test_normal.rs  test_timeout.rs
stream/tests/: test_client_task.rs  test_client_task_enum.rs  test_client_task_enum_define.rs  test_server_task_enum.rs  test_server_task_enum_define.rs
test-suite/: Cargo.toml
test-suite/src/: lib.rs
test-suite/src/api/: client.rs  server.rs  service.rs
test-suite/src/api/basic/: test_remote.rs
test-suite/src/stream/: client.rs  server.rs
test-suite/src/stream/basic/: test_client_drop.rs  test_error_handling.rs  test_normal.rs  test_ping.rs  test_timeout.rs
test-suite/src/stream/bench/: throughput.rs
test-suite/src/stream/pressure/: test_failover.rs  test_round_robin.rs
tests/: common.rs  test_client_service.rs
transport/quic/: Cargo.toml
transport/rdma/: Cargo.toml
transport/tcp/: Cargo.toml
transport/tcp/src/: client.rs  lib.rs  server.rs
