[workspace]
members = ["codec", "macros", "stream", "stream/macros", "transport/tcp", "transport/rdma", "transport/quic", "test-suite", ]

[package]
name = "razor-rpc"
version = "0.3.0"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
repository = "https://github.com/NaturalIO/razor-rpc"
documentation = "https://docs.rs/razor-rpc"
keywords = ["networking", "rpc"]
readme = "README.md"
license = "MIT"
description = """
razor-rpc is a modular, pluggable RPC for high throughput scenario, supports various runtimes,
with a low-level streaming interface, and high-level remote API call interface.
"""

[dependencies]
log = { version = "0.4", features = ["std", "kv_unstable"] }
captains-log = ">=0.15"
io-buffer = "1"
serde = "1"
async-trait = "0"
rustc-hash = "2"
crossfire = "2.1"
orb = "0"
razor-stream = {path="stream/", version=">=0.3"}
razor-rpc-macros = { path = "macros", version = ">=0.3" }

[dev-dependencies]
serde_derive = "1"
nix = "0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
razor-rpc-tcp = {path="transport/tcp/", version = "0"}
razor-rpc-codec = {path="codec/", version="0", features=["msgpack"]}
orb-tokio = { version="0" }

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[features]
