[package]
name = "razor-rpc-codec"
version = "0.2.13"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
repository = "https://github.com/NaturalIO/razor-rpc"
documentation = "https://docs.rs/razor-rpc"
keywords = ["networking", "rpc"]
readme = "../README.md"
license = "MIT"
description = """
This is the codec packages for razor_rpc.
razor_rpc is a modular, pluggable RPC for high throughput scenario, supports various runtime,
with a low-level streaming interface, and high-level remote API call interface.
"""

[dependencies]
serde = "1"
rmp-serde = {version=">=1.1.1", optional=true}
log = "0.4"

[features]
default = []
msgpack = ["dep:rmp-serde"]

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
