[package]
name = "razor-stream"
version = "0.2.13"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
repository = "https://github.com/NaturalIO/razor-rpc"
documentation = "https://docs.rs/razor-rpc"
keywords = ["networking", "rpc"]
license = "MIT"
readme = "../README.md"
description = """
The streaming interface of razor-rpc.
razor-rpc is a modular, pluggable RPC for high throughput scenario, supports various runtimes,
with a low-level streaming interface, and high-level remote API call interface.
"""

[dependencies]
razor-rpc-core = {path="../core/", version=">=0.2"}
razor-stream-macros = {path="macros", version=">=0.2"}
log = { version = "0.4", features = ["std", "kv_unstable"] }
captains-log = ">=0.15"
futures = "0.3"
zerocopy = { version="0.8", features=["derive"]}
io-buffer = "1"
rustc-hash = "1.1"
sync-utils = "0"
serde = "1"
crossfire = "2.1"
arc-swap = "1"
orb = { version="0" }

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
