[package]
name = "razor-rpc-test"
version = "0.2.13"
edition = "2024"

[dependencies]
serde = "1"
serde_derive = "1"
razor-rpc-core = {path="../core", version="0"}
razor-stream = {path="../stream/", version="0"}
orb = { version = "0" }
orb-tokio = { version = "0", optional=true}
orb-smol = { version = "0", features=["global"], optional=true}
razor-rpc-tcp = {path="../transport/tcp", version="0"}
razor-rpc-codec = {path="../codec", version="0", features=["msgpack"]}
razor-rpc = {path="../", version="0"}
log = { version = "0.4", features = ["std", "kv_unstable"] }
captains-log = ">=0.15"
crossfire = "2.1"
tokio = { version = "1", features = ["net", "time", "rt", "rt-multi-thread"], optional=true }
smol = {version = "2", optional=true }
io-buffer = "1"
rstest = "0"
nix = "0"
async-trait = "0"

[dev-dependencies]

[features]
default = ["smol"]
tokio = ["dep:tokio", "dep:orb-tokio"]
smol = ["dep:smol", "dep:orb-smol"]

