[package]
name = "razor-rpc-tcp"
version = "0.3.0"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
repository = "https://github.com/NaturalIO/razor-rpc"
documentation = "https://docs.rs/razor-rpc"
keywords = ["networking", "rpc"]
readme = "../../README.md"
license = "MIT"
description = """
The TCP/unix transport layer of razor-rpc.
razor-rpc is a modular, pluggable RPC for high throughput scenario, supports various runtimes,
with a low-level streaming interface, and high-level remote API call interface.
"""

[dependencies]
razor-stream = {path="../../stream", version=">=0.3"}
log = { version = "0.4", features = ["std", "kv_unstable"] }
orb = { version="0"}
captains-log = ">=0.15"
async-trait = "0.1"
crossfire = "2.1"
io-buffer = "1"
libc = "0"

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
